--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build",
+        "build": "vite build --mode production",
         "heroku-postbuild": "npm run build"
     },
     "devDependencies": {
