--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build",
+        "dev": "vite --host --mode dev",
+        "build": "vite build --mode production",
         "heroku-postbuild": "npm run build"
     },
     "devDependencies": {
